= Changelog

This document provides a high-level view of the changes to the macOS Security Compliance Project.

== [Big Sur, Revision 2] - 2021-02-16

* Rules
** Fixed Rules

* Baselines
** Added DISA-STIG

* Scripts
** generate_guidance
*** Bug fixes
*** Custom rules support added
*** Added ability to signed configuration profiles
*** Added plist generation for rules
*** Generates preferences files for compliance script
*** Compliance script enhancements
**** Exemption support
**** Modified plist behavior
**** Log rotation
** yaml-to-oval
*** Bug fixes


== [Big Sur, Revision 1] - 2020-11-10

* Rules
** Added Rules
*** os_authenticated_root_enable.yaml
*** os_ssh_server_alive_count_max_configure.yaml
*** os_ssh_server_alive_interval_configure.yaml
*** sysprefs_personalized_advertising_disable.yaml
*** sysprefs_ssh_disable.yaml
** Deleted Rules
*** sysprefs_ad_tracking_disable.yaml
** Updated existing rules to reflect 11.0
** Updated CCEs to existing rules

* Baselines
** Added Big Sur rules to baseline yaml files

* Scripts
** generate_baseline
*** Bug fixes
** generate_guidance
*** Added --check/--fix flags
*** Added $pwpolicy_file variable
** yaml-to-oval
*** Bug Fixes

* Miscellaneous
** Added SCAP generation scripts