@@ -14,7 +14,6 @@
 :nofooter:
 $nist171_attribute
 $stig_attribute
-$srg_attribute
 ifdef::backend-pdf[]
 = $profile_title
 $version ($release_date)
