@@ -31,11 +31,6 @@ ifdef::show_STIG[]
 !$rule_disa_stig
 endif::[]
 
-ifdef::show_STIG[]
-!DISA SRG(s)
-!$rule_srg
-endif::[]
-
 ifdef::show_tags[]
 !CCE
 !$rule_cce
